@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# ref 312
+# ref 313
 
 CACHE:
 favicon.ico
@@ -166,6 +166,7 @@ images/handle.png
 images/hardware.png
 images/hold.png
 images/hold_mini.png
+images/house.png
 images/ice.png
 images/insert.png
 images/iphone-icon.png
