@@ -1,6 +1,7 @@
 Version 1.0.xxx (Oktober xxth 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
 - Implemented: Counterlog, Week chart, legend values
+- Implemented: Room Plan editor, dashboard room selector
 
 Version 1.0.1087 (Oktober 16th 2013)
 - Implemented: Login page (solves the caching problems)
